src/snapshots/rlox__test_runtime__brackets_mandatory.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        if (true) print 1;\n        \")"
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:2:12]
   │
 2 │         if (true) print 1;
   │                   ──┬──  
   │                     ╰──── Expected {
───╯


